@@ -1,3 +1,8 @@
+2001-05-05  Larry Jones  <larry.jones@sdrc.com>
+
+	* login.c (password_entry_operation): Only warn if unable to open
+	.cvspass for reading: may be initial login and it doesn't exist yet.
+
 2001-05-15  Derek Price  <dprice@collab.net>
 
 	* client.c (start_tcp_server): Use the struct sockaddr_in declared in
